# NexFlow

./: .gitignore  README.md  SESSION_HANDOFF.md  event_chain_audit.csv  mfe_capture_audit.csv  pyproject.toml  regime_robustness.csv  signal_forensic.csv  signal_quality_study.csv  strategy_v2_comparison.csv  trade_audit.csv  trade_reconstruction_validator.csv
afterimage/: AFTERIMAGE.md
config/: default.yaml
data/: engine1_journal.csv  engine1_state.json  nexflow_live_state.json
docs/: STOCK_BOOK_SPEC.md  opportunity_score_design.md  runbook_live_paper_trading.md
factory/: START_HERE.md
fulcrum/: START_HERE.md
life-os/: 00-DIAGNOSIS.md  01-QSCHOOL-MODEL.md  02-PRACTICE-ARCHITECTURE.md  03-DAILY-PROTOCOL.md  04-SWING-ANALYSIS.md  README.md  WEEK.md  app.html  manifest.json  preview-maxed.html  scoreboard.py  sw.js
nexflow/: __init__.py  config.py  logging.py  main.py
reports/: paper_session.html
research/: RESEARCH_LOG.md
scripts/: alpha_board.py  alpha_debug.py  alpha_fomo_backfill.py  alpha_fomo_trace.py  alpha_migrate_flags.py  alpha_tag_narratives.py  alpha_track_outcomes.py  alpha_weekly_report.py  backtest_1h_breakout.py  backtest_bb_squeeze.py  backtest_bear_strategies.py  backtest_btceth_shorts.py  backtest_classic_strategies.py  backtest_confluence_sizing.py  backtest_cross_momentum.py  backtest_daily_rsi_pullback.py  backtest_ema_pullback.py  backtest_frf.py  backtest_frf_smart.py  backtest_full_regime_system.py  backtest_funding_carry.py  backtest_funding_extremes.py  backtest_htf_trend.py  backtest_ict_fvg.py  backtest_ict_fvg_v2.py  (+104 more)
(+340 files in other folders)
